--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "BSD 3",
   "dependencies": {
     "ohm-js": "^17.1.0"
   },
