--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "cd tests && node tests_september.js"
+    "test": "cd tests && node --trace-uncaught tests_september.js"
   },
   "keywords": [],
   "author": "Carlos Pinzón",
