--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "webpack --config webpack.config.js",
     "test": "cd tests && node --trace-uncaught tests_september.js"
   },
   "keywords": [],
   "author": "Carlos Pinzón",
   "license": "BSD 3",
   "dependencies": {
-    "ohm-js": "^17.1.0"
+    "ohm-js": "^17.1.0",
+    "webpack": "^5.88.2"
   },
   "devDependencies": {
     "d3": "^6.0.0",
-    "jsdom": "^22.1.0"
+    "jsdom": "^22.1.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-license-plugin": "^4.3.0"
   }
 }
