--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "d3": "^6.0.0",
     "jsdom": "^22.1.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack-cli": "^5.1.4",
     "webpack-license-plugin": "^4.3.0"
   }
