--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
   "author": "Carlos Pinzón",
   "license": "BSD 3",
   "dependencies": {
-    "ohm-js": "^17.1.0",
-    "webpack": "^5.88.2"
+    "ohm-js": "^17.1.0"
   },
   "devDependencies": {
-    "d3": "^6.0.0",
-    "jsdom": "^22.1.0",
-    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
-    "webpack-license-plugin": "^4.3.0"
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack-license-plugin": "^4.3.0",
+    "typescript": "^5.2.2",
+    "ts-loader": "^9.5.0",
+    "d3": "^6.0.0",
+    "jsdom": "^22.1.0"
   }
 }
